--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,8 +3,8 @@ name: publish
 on:
   workflow_dispatch:
     inputs:
-      torrent:
-        description: "publish torrent"
+      torrent_cli:
+        description: "publish torrent_cli"
         type: boolean
         default: false
 
@@ -16,16 +16,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - name: install cargo components
         run: rustup component add clippy
-
       - name: run tests
         run: .github/scripts/test.sh
-
       - name: login to crates.io
         run: cargo login ${{ secrets.CRATESIO }}
+      - name: publish torrent_cli
+        if: ${{ inputs.torrent_cli }}
+        run: .github/scripts/publish_test.sh torrent_cli && .github/scripts/publish.sh torrent_cli
 
-      - name: publish torrent
-        if: ${{ inputs.torrent }}
-        run: .github/scripts/publish_test.sh torrent && .github/scripts/publish.sh torrent
