--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,12 +1,9 @@
 name: publish
 
 on:
-  workflow_dispatch:
-    inputs:
-      torrent_cli:
-        description: "publish torrent_cli"
-        type: boolean
-        default: false
+  push:
+    tags:
+      - v[0-9]+.*
 
 env:
   CARGO_TERM_COLOR: always
@@ -23,5 +20,4 @@ jobs:
       - name: login to crates.io
         run: cargo login ${{ secrets.CRATESIO }}
       - name: publish torrent_cli
-        if: ${{ inputs.torrent_cli }}
-        run: .github/scripts/publish_test.sh torrent_cli && .github/scripts/publish.sh torrent_cli
+        run: .github/scripts/publish.sh torrent_cli
