--- a/torrent_ui/Cargo.toml
+++ b/torrent_ui/Cargo.toml
@@ -12,4 +12,11 @@ all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
+# async
 tokio = { workspace = true, features = ["rt-multi-thread", "signal", "macros"] }
+# error
+thiserror = { workspace = true }
+# utils
+url = "2.5.2"
+# cli
+clap = { version = "4.5.16", features = ["derive"] }
