--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["torrent_ui", "torrent_lib"]
+members = ["bt_ui", "bt_lib"]
 resolver = "2"
 
 [workspace.package]
@@ -8,12 +8,12 @@ authors = ["Louis <836250617@qq.com>"]
 description = "A bittorrent client."
 license = "MIT"
 edition = "2021"
-repository = "https://github.com/kingwingfly/bittorrent"
+repository = "https://github.com/kingwingfly/bt"
 documentation = ""
 
 [workspace.dependencies]
-torrent_ui = { path = "torrent_ui" }
-torrent_lib = { path = "torrent_lib" }
+bt_ui = { path = "bt_ui" }
+bt_lib = { path = "bt_lib" }
 # async
 tokio = { version = "1", default-features = false }
 # error
