--- a/bt_lib/Cargo.toml
+++ b/bt_lib/Cargo.toml
@@ -20,3 +20,5 @@ thiserror = { workspace = true }
 url = "2.5.2"
 # tracing
 tracing = { workspace = true }
+# net
+reqwest = { version = "0.12.5", features = ["blocking"] }
