--- a/bt_lib/Cargo.toml
+++ b/bt_lib/Cargo.toml
@@ -17,11 +17,15 @@ tokio = { workspace = true, features = ["rt-multi-thread", "signal", "macros"] }
 # error
 thiserror = { workspace = true }
 # utils
-url = "2.5.2"
+url = { version = "2.5.2" }
+rand = { version = "0.8.5" }
 # tracing
 tracing = { workspace = true }
 # net
-reqwest = { version = "0.12.5", features = ["blocking"] }
+reqwest = { version = "0.12.5", features = [] }
+# decode
+base32 = { version = "0.5.1" }
+hex = { version = "0.4.3" }
 
 [dev-dependencies]
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
